--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -37,7 +37,9 @@
     <hr />
 
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
-
+    <table>
+        <td th:replace="fragments::eachJob"></td>
+    </table>
 </div>
 
 </body>
