--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -26,6 +26,19 @@
             </div>
         </div>
     </div>
-
+    <div th:fragment="eachJob">
+        <table>
+            <tr th:each="job : ${jobs}" class="job-listing">
+                <td>
+                    <p th:text="'ID: ' + ${job.id}"></p>
+                    <p th:text="'Name: ' + ${job.name}"></p>
+                    <p th:text="'Employer: ' + ${job.employer}"></p>
+                    <p th:text="'Location: ' + ${job.location}"></p>
+                    <p th:text="'Position Type: ' + ${job.positionType}"></p>
+                    <p th:text="'Skill: ' + ${job.coreCompetency}"></p>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
